- Fixed issue for upon clicking the third field of section 1 after filling out other sections, the information blurb doesn’t reappear like it does in other instances. - Also added logic for decimal value calculation. - Aligned mall burgundy text, the calculation text, and the boxes for mobile view. - Added same styling for “Home > Resources”.

--- a/src/scss/estimate-generate.scss
+++ b/src/scss/estimate-generate.scss
@@ -274,7 +274,7 @@
   }
 
   .inner-cal {
-    width: 70%;
+    width: 100%;
     margin: auto !important;
   }
 
@@ -306,6 +306,7 @@
   }
 
   .multi-line-class {
+     margin-top: 15px;
     .formula1 {
       margin-top: 20px;
     }
